k8s/memcached.yaml
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: manageiq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: memcached
  template:
    metadata:
      name: memcached
      labels:
        name: memcached
    spec:
      containers:
      - name: memcached
        image: <your repo>/manageiq-memcached:latest
        ports:
        - containerPort: 11211
        readinessProbe:
          tcpSocket:
            port: 11211
        livenessProbe:
          tcpSocket:
            port: 11211
        resources:
          requests:
            memory: 64Mi
            cpu: 200m
          limits:
            memory: 256Mi
