k8s/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
  labels:
    app: manageiq
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      name: orchestrator
  template:
    metadata:
      name: orchestrator
      labels:
        name: orchestrator
    spec:
      containers:
      - name: orchestrator
        image: <your repo>/my-manageiq-orchestrator:latest-jansa
        livenessProbe:
          exec:
            command:
            - pidof
            - MIQ Server
          initialDelaySeconds: 480    
          timeoutSeconds: 3
      serviceAccountName: 'manageiq-orchestrator'
      terminationGracePeriodSeconds: 90
