k8s/httpd-console-svc.yaml
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq
  name: remote-console
spec:
  ports:
  - name: remote-console-3000
    port: 3000
  selector:
    service: remote-console
