k8s/httpd-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq
  name: ui
spec:
  ports:
  - name: ui-3000
    port: 3000
  selector:
    service: ui
