k8s/httpd-ws-svc.yaml
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq
  name: web-service
spec:
  ports:
  - name: web-service-3000
    port: 3000
  selector:
    service: web-service
