k8s/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq
  name: kafka
spec:
  ports:
  - name: kafka
    port: 9092
  selector:
    name: kafka
