k8s/kafka-zoo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: manageiq
  name: zookeeper
spec:
  ports:
  - name: zookeeper
    port: 2181
  selector:
    name: zookeeper
