k8s/memcached-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: manageiq
spec:
  ports:
  - name: memcached
    port: 11211
  selector:
    name: memcached
