k8s/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: manageiq
spec:
  ports:
  - name: postgresql
    port: 5432
  selector:
    name: postgresql
